add calc-bill project

--- a/index.html
+++ b/index.html
@@ -363,11 +363,11 @@
                           Zamieściłem w nim obszery katalog prac różnych twórców oraz kilka swoich. 
                         </p>
                         <p class="buttons text-center">
-                          <a href="http://html5.cecherz.pl/dw.html" class="btn btn-outline-primary">
+                          <a href="http://html5.cecherz.pl/dw.html" class="btn btn-outline-primary" target="_blank">
                             <i class="fa fa-globe"></i> 
                             Odwiedź stronę
                           </a>
-                          <a href="http://html5.cecherz.pl/doc/czytaj.pdf" class="btn btn-outline-primary">
+                          <a href="http://html5.cecherz.pl/doc/czytaj.pdf" class="btn btn-outline-primary" target="_blank">
                             <i class="fa fa-download"></i> 
                             Pobierz dokumentację  
                           </a>
@@ -397,7 +397,7 @@
                           asortymentu w branży DTP.    
                         </p>
                         <p class="buttons text-center">
-                          <a href="http://www.pjs-studio.net.pl/index.html" class="btn btn-outline-primary">
+                          <a href="http://www.pjs-studio.net.pl/index.html" class="btn btn-outline-primary" target="_blank">
                             <i class="fa fa-globe"></i> 
                             Odwiedź stronę
                           </a>
@@ -430,7 +430,7 @@
                           <a href="https://dev.w3.org/html5/spec-LC/">HTML5</a>.  
                         </p>
                         <p class="buttons text-center">
-                          <a href="http://www.fotojadwiga.pl/index.html" class="btn btn-outline-primary">
+                          <a href="http://www.fotojadwiga.pl/index.html" class="btn btn-outline-primary" target="_blank">
                             <i class="fa fa-globe"></i> 
                             Odwiedź stronę
                           </a>
@@ -463,7 +463,7 @@
                           <a href="https://www.nazwa.pl/blog/czym-jest-google-analytics">Google Analitics</a>.  
                         </p>
                         <p class="buttons text-center">
-                          <a href="https://auto-drift.pl/" class="btn btn-outline-primary">
+                          <a href="https://auto-drift.pl/" class="btn btn-outline-primary" target="_blank">
                             <i class="fa fa-globe"></i> 
                             Odwiedź stronę
                           </a>
@@ -493,7 +493,7 @@
                           szablonu napisanych w PHP. 
                         </p>
                         <p class="buttons text-center">
-                          <a href="https://www.jeti.org.pl/" class="btn btn-outline-primary">
+                          <a href="https://www.jeti.org.pl/" class="btn btn-outline-primary" target="_blank">
                             <i class="fa fa-globe"></i> 
                             Odwiedź stronę
                           </a>
@@ -542,15 +542,15 @@
                         </p>
                         <p class="buttons text-center">
                             <a href="#" class="btn btn-outline-primary disabled">
-                              <i class="fa fa-globe"></i> Odwiedź stronę
+                              <i class="fa fa-globe" target="_blank"></i> Odwiedź stronę
                             </a>
                             <a href="https://drive.google.com/file/d/1NBXHHFKqLO49TuhxZ5Jsys_BnXCp26Ak/view"  
-                              class="btn btn-outline-primary">
+                              class="btn btn-outline-primary" target="_blank">
                                 <i class="fa fa-download"></i> Pobierz dokumentację
                             </a>
                             <a href="https://github.com/pangeon/SEKP"  
-                              class="btn btn-outline-primary">
-                                <i class="fa fa-download"></i> Github
+                              class="btn btn-outline-primary" target="_blank">
+                                <i class="fa fa-github"></i> Github
                             </a>
                           </p>
                       </div>
@@ -579,37 +579,62 @@
                           poprzez witrynę WWW.
                         </p>
                         <p class="buttons text-center">
-                          <a href="#" class="btn btn-outline-primary disabled">
+                          <a href="#" class="btn btn-outline-primary disabled" target="_blank">
                             <i class="fa fa-globe"></i> Odwiedź stronę
                           </a>
                           <a href="https://drive.google.com/drive/folders/1_I8ncht73KGMFiQPxfCGAd6vTOVJUFb8?usp=sharing"  
-                            class="btn btn-outline-primary">
+                            class="btn btn-outline-primary" target="_blank">
                               <i class="fa fa-download"></i> Pobierz VM
                           </a>
                           <a href="https://github.com/pangeon/Taskello"  
-                            class="btn btn-outline-primary">
-                              <i class="fa fa-download"></i> Github
+                            class="btn btn-outline-primary" target="_blank">
+                              <i class="fa fa-github"></i> Github
                           </a>
                         </p>
                       </div>
                     </div>
                   </div>
 
-                  <!-- <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-8.jpg" alt="" class="img-fluid">
+                  <div data-category="java" class="reference-item col-lg-3 col-md-6">
+                    <div class="reference"><a href="#"><img src="img/portfolio-8.jpg" alt="" class="img-fluid gainsboro-frame">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">calc-bill</h3>
+                            <p>Aplikacja do porządkowania rachunków.</p>
                           </div>
                         </div></a>
-                      <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
-                        <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
-                        <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                      <div data-images="img/main-slider8-1.jpg,img/main-slider8-2.jpg,img/main-slider8-3.jpg" class="sr-only reference-description">
+                        <p style="text-align: justify;">
+                          Program napisany w Javie z wykorzystaniem frameworka <a href="https://spring.io/">Spring</a> oraz 
+                          baz danych <a href="https://www.mysql.com/">MySQL</a>.
+                          Projekt zaliczeniowy studiów inżynierskich z informatyki, podczas obrony pracy o
+                          pt. <i>RESTful WebAPI dla technologii Java.</i>
+                        </p>
+                        <p style="text-align: justify;">
+                          Aplikacja przeznaczona do porządkowania rachunków w gospodarstwie domowym. 
+                          Stworzona w celu łatwiejszego zarządzania budżetem. 
+                          Pozwala na robienie oszczędności poprzez monitorowanie 
+                          poszczególnych zakupów. System posiada własne <a href="https://restfulapi.net/">REST-API</a>.
+                          Program pozwala na edycji użytkowników i przypisanym im płatności, zapewnia
+                          możliwość filtrowania danych.  
+                        </p>
+                        <p class="buttons text-center">
+                          <a href="#" class="btn btn-outline-primary disabled" target="_blank">
+                            <i class="fa fa-globe"></i> 
+                            Odwiedź stronę
+                          </a>
+                          <a href="https://drive.google.com/file/d/10wX_dlgCzSWDs4vBfZCbf95AF1trfF8r/view" class="btn btn-outline-primary" target="_blank">
+                            <i class="fa fa-download"></i> 
+                            Pobierz dokumentację
+                          </a>
+                          <a href="https://github.com/pangeon/calc-bill"  class="btn btn-outline-primary" target="_blank">
+                            <i class="fa fa-github"></i> 
+                            Github
+                          </a>
+                        </p>
                       </div>
                     </div>
-                  </div> -->
+                  </div>
 
             </div>
           </div>
