add jmtrain project

--- a/index.html
+++ b/index.html
@@ -636,6 +636,40 @@
                     </div>
                   </div>
 
+                  <div data-category="java" class="reference-item col-lg-3 col-md-6">
+                    <div class="reference"><a href="#"><img src="img/portfolio-9.jpg" alt="" class="img-fluid gainsboro-frame">
+                        <div class="overlay">
+                          <div class="inner">
+                            <h3 class="h4 reference-title">JMTrain</h3>
+                            <p>Zarządzanie bazą szkoleń.</p>
+                          </div>
+                        </div></a>
+                      <div data-images="img/main-slider9-1.jpg,img/main-slider9-2.jpg,img/main-slider9-3.jpg,img/main-slider9-4.jpg" class="sr-only reference-description">
+                        <p style="text-align: justify;">
+                          Program napisany w Javie z wykorzystaniem bibliotek frameworka <a href="https://spring.io/">Spring</a> oraz 
+                          baz danych <a href="https://www.mysql.com/">MySQL</a>.
+                          Prosty layout panel zarządzania napisany z wykorzystaniem <a href="https://getbootstrap.com/">Bootstrapa</a>.
+                        </p>
+                        <p style="text-align: justify;">
+                          Aplikacja pozwala na zarządzanie szkoleniami. 
+                          Program umożliwia edycję danych osobowych użytkowników oraz dodawanie zapisów na kursy. 
+                          System jest bezpieczny - wysyła potwierdzenie e-mailem po rejestracji oraz chroni hasła. 
+                          Szyfruje wrażliwe dane przy użyciu <a hre="https://pl.wikipedia.org/wiki/MD5">algorytmu MD5</a>.
+                        </p>
+                        <p class="buttons text-center">
+                          <a href="#" class="btn btn-outline-primary disabled" target="_blank">
+                            <i class="fa fa-globe"></i> 
+                            Odwiedź stronę
+                          </a>
+                          <a href="https://github.com/pangeon/JMTrain"  class="btn btn-outline-primary" target="_blank">
+                            <i class="fa fa-github"></i> 
+                            Github
+                          </a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
             </div>
           </div>
         </div>
