--- a/index.html
+++ b/index.html
@@ -771,6 +771,20 @@
     </section>
     <!-- Map-->
     <div id="map"></div>
+    <footer class="main-footer" id="footer-about-info-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mt-4 text-center">
+            <p id="footer-about-info-text">
+              <i class="fa fa-phone" aria-hidden="true"></i><span>798-996-422</span>
+              <i class="fa fa-envelope" aria-hidden="true"></i>
+              <span>cecherz@outlook.com</span>
+              <i class="fa fa-map-marker" aria-hidden="true"></i><span>Pabianice&nbsp;95-200</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <footer class="main-footer">
       <div class="container">
         <div class="row">
@@ -782,17 +796,17 @@
               <a href="https://github.com/pangeon" data-wow-delay="0.2s" class="external instagram wow fadeInUp">
                   <i class="fa fa-github"></i>
               </a>
-              <a href="#" style="display: none;" data-wow-delay="0.4s" class="external gplus wow fadeInUp">
-                  <i class="fa fa-google-plus"></i>
+              <a href="https://www.linkedin.com/in/kamil-cecherz/" data-wow-delay="0.4s" class="external gplus wow fadeInUp">
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
               </a>
-              <a href="mailto:kamil.cecherz@gmail.com" data-wow-delay="0.6s" class="email wow fadeInUp">
+              <a href="mailto:cecherz@outlook.com" data-wow-delay="0.6s" class="email wow fadeInUp">
                   <i class="fa fa-envelope"></i>
               </a>
           </p>
           </div>
           <!-- /.6-->
           <div class="col-md-6 text-center text-lg-right mt-4 mt-lg-0">
-            <p>© 2022 Kamil Cecherz. Wszelkie prawa zastrzeżone.</p>
+            <p id="copyright-info">© 2022 Kamil Cecherz. Wszelkie prawa zastrzeżone.</p>
           </div>
           <div class="col-12 mt-4">
             <p class="template-bootstrapious">Template by <a href='https://bootstrapious.com/p/bootstrap-carousel'>Bootstrapious</a> & <a href="https://fity.cz/ostrava">Fity</a></p>
