better icons and hover animations

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
               <!-- <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li> -->
               <li class="nav-item"><a href="#references" class="nav-link link-scroll">Projekty</a></li>
               <li class="nav-item"><a href="#customers" class="nav-link link-scroll">Technologie</a></li>
+              <li class="nav-item"><a href="http://blog.cecherz.pl/" class="nav-link link-scroll" target="_blank">Blog</a></li>
               <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Kontakt</a></li>
             </ul>
           </div>
@@ -73,7 +74,7 @@
             <h3>Programowanie webowe</h3>
             <hr />
             <p style="text-align: justify;">
-              Mieszkam w Łodzi. Lubię czytać książki, spędzać czas na grach strategicznych, czasem pisać wiersze. 
+              Mieszkam w Pabianicach. Lubię czytać książki, spędzać czas na grach strategicznych, czasem pisać wiersze. 
               Rozwijam się od kilku lat jako projektant stron internetowych, 
               zgłębiam zagadnienia z zakresu nowoczesnych technologii w obszarze: <strong>projektowania graficznego i programowania</strong>.
             </p>
@@ -146,7 +147,7 @@
         </header>
         <div class="row services text-center">
           <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-object-group"></i></div>
+            <div class="icon"><i class="fa fa-paint-brush" aria-hidden="true"></i></div>
             <h3 class="heading mb-3 text-400">Grafika reklamowa</h3>
             <p class="text-center description">
               Banery reklamowe, broszury do druku, infografiki, logo, identyfikacja wizualna, prezentacje, 
@@ -271,25 +272,25 @@
         <div class="row showcase text-center"> 
           <div data-animate="fadeInUp" class="col-lg-3 col-md-6">
             <div class="item">
-              <div class="icon"><i class="fa fa-align-justify"></i></div>
+              <div class="icon"><i class="fa fa-file-code-o" aria-hidden="true"></i></div>
               <h5 class="text-400 mt-4 text-uppercase"><span class="counter">9</span><br>Projekty HTML/CSS</h5>
             </div>
           </div>
           <div data-animate="fadeInUp" class="col-lg-3 col-md-6">
             <div class="item">
-              <div class="icon"><i class="fa fa-copy"></i></div>
+              <div class="icon"><i class="fa fa-cubes" aria-hidden="true"></i></div>
               <h5 class="text-400 mt-4 text-uppercase"><span class="counter">4</span><br>Strony oparte o CMS-y</h5>
             </div>
           </div>
           <div data-animate="fadeInUp" class="col-lg-3 col-md-6">
             <div class="item">
-              <div class="icon"><i class="fa fa-users"></i></div>
+              <div class="icon"><i class="fa fa-terminal" aria-hidden="true"></i></div>
               <h5 class="text-400 mt-4 text-uppercase"><span class="counter">4</span><br>Aplikacje webowe</h5>
             </div>
           </div>
           <div data-animate="fadeInUp" class="col-lg-3 col-md-6">
             <div class="item">
-              <div class="icon"><i class="fa fa-font"></i></div>
+              <div class="icon"><i class="fa fa-star-half-o" aria-hidden="true"></i></div>
               <h5 class="text-400 mt-4 text-uppercase"><span class="counter">177</span><br>Projekty graficzne</h5>
             </div>
           </div>
