add project gwiazdy pop, new links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <!-- <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li> -->
               <li class="nav-item"><a href="#references" class="nav-link link-scroll">Projekty</a></li>
               <li class="nav-item"><a href="#customers" class="nav-link link-scroll">Technologie</a></li>
-              <li class="nav-item"><a href="http://blog.cecherz.pl/" class="nav-link link-scroll" target="_blank">Blog</a></li>
+              <li class="nav-item"><a href="http://cecherz.jeti.org.pl/" class="nav-link link-scroll" target="_blank">Blog</a></li>
               <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Kontakt</a></li>
             </ul>
           </div>
@@ -60,6 +60,11 @@
         <p data-animate="slideInUp" class="h3 text-shadow text-400">
           Zajmuje się projektowaniem stron WWW, grafiką reklamową, 
           tworzeniem aplikacji webowych. Umiem programować w Javie, Pythonie, C++.
+          <br />
+          <br />
+          <a href="cv/Kamil_Cecherz_02_05_2022_v2.pdf" id="link-cv" target="_blank">
+            Pobierz moje CV
+          </a>
         </p>
       </div>
     </section>
@@ -332,7 +337,8 @@
           <!-- Reference detail-->
           <div id="references-masonry" data-animate="fadeInUp">
             <div class="row">
-                  <div data-category="html-css" class="reference-item col-lg-3 col-md-6">
+                  
+                <div data-category="html-css" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-1.jpg" alt="" class="img-fluid gainsboro-frame">
                         <div class="overlay">
                           <div class="inner">
@@ -364,13 +370,49 @@
                           Zamieściłem w nim obszery katalog prac różnych twórców oraz kilka swoich. 
                         </p>
                         <p class="buttons text-center">
-                          <a href="http://html5.cecherz.pl/dw.html" class="btn btn-outline-primary" target="_blank">
+                          <a href="http://html5.jeti.org.pl/dw.html" class="btn btn-outline-primary" target="_blank">
                             <i class="fa fa-globe"></i> 
                             Odwiedź stronę
                           </a>
-                          <a href="http://html5.cecherz.pl/doc/czytaj.pdf" class="btn btn-outline-primary" target="_blank">
+                          <a href="http://html5.jeti.org.pl/doc/czytaj.pdf" class="btn btn-outline-primary" target="_blank">
                             <i class="fa fa-download"></i> 
                             Pobierz dokumentację  
+                          </a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div data-category="html-css" class="reference-item col-lg-3 col-md-6">
+                    <div class="reference"><a href="#"><img src="img/portfolio-10.jpg" alt="" class="img-fluid gainsboro-frame">
+                        <div class="overlay">
+                          <div class="inner">
+                            <h3 class="h4 reference-title">GWIAZDY POP</h3>
+                            <p>
+                              Galeria zdjęć gwiazd muzyki pop.
+                            </p>
+                          </div>
+                        </div></a>
+                      <div 
+                        data-images="img/main-slider10-1.jpg,img/main-slider10-2.jpg,img/main-slider10-3.jpg" 
+                        class="sr-only reference-description">
+                        <p style="text-align: justify;">
+                          Strona wykonana hobbystycznie, zawiera zestaw zdjęć pięknych kobiet, gwiazd muzyki pop:
+                          <a href="https://www.beyonce.com/">Beyonce</a>, 
+                          <a href="https://www.madonna.com/">Madonny</a>, 
+                          <a href="https://pl.wikipedia.org/wiki/Shakira">Shakiry</a>, 
+                          <a href="https://www.youtube.com/user/britneyspears?app=desktop&gl=PL&hl=pl">Britney Spears</a> 
+                          oraz <a href="https://www.youtube.com/channel/UCgBN6eQyZPnsApiL1QW44Hg">Christiny Aguilery</a>. 
+                          Witryna jest pamiątką
+                          z lat studiów 2013/2014 i stanowi ciekawy przykład wykorzystania efektów HTML i CSS.
+                        </p>
+                        <p style="text-align: justify;">
+                          Niewielki projekt, wykorzystuje najbardziej podstawowe technologie webowe.
+                        </p>
+                        <p class="buttons text-center">
+                          <a href="http://gwiazdy-pop.jeti.org.pl/index_1.html" class="btn btn-outline-primary" target="_blank">
+                            <i class="fa fa-globe"></i> 
+                            Odwiedź stronę
                           </a>
                         </p>
                       </div>
