Handle contact form

--- a/index.html
+++ b/index.html
@@ -336,8 +336,7 @@
           </div>
           <!-- Reference detail-->
           <div id="references-masonry" data-animate="fadeInUp">
-            <div class="row">
-                  
+            <div class="row">    
                 <div data-category="html-css" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-1.jpg" alt="" class="img-fluid gainsboro-frame">
                         <div class="overlay">
@@ -783,8 +782,9 @@
         </header>
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <form id="contact-form" method="post" action="">
+            <form id="contact-form" method="post" action="php/contact.php" role="form">
               <div class="messages"></div>
+
               <div class="controls">
                 <div class="row">
                   <div class="col-md-6">
